<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="add_word_fragment">Нове слово</string>

    <string name="btn_add">Додати</string>
    <string name="btn_cancel">Відмінити</string>

    <string name="empty_state_not_found">Переклад такого слова не знайдений</string>
    <string name="empty_state_no_connection">Відсутнє з\'єднання з інтернетом</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
