<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.liudmula.myapplication.dictionary.DictionaryFragment">

    <!--<LinearLayout-->


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTypeWrd"
            android:layout_margin="5dp"
            android:hint="Enter"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lvDict"
            android:dividerHeight="1dp">

        </ListView>
    <!--</LinearLayout>-->


</LinearLayout>
